@@ -39,7 +39,7 @@ public class QuotaObserver implements Control {
      * 
      * @config
      */
-    private final String PAR_PROT = "protocol";
+    private static final String PAR_PROT = "protocol";
 
     // //////////////////////////////////////////////////////////////////////////
     // Fields
